fix: stop player entry overflow
Disable player entry width, and set player grid to maximum width. An unsatisfactory solution since player entries won't share the same width when reducing screen size.

--- a/style.css
+++ b/style.css
@@ -95,14 +95,14 @@ a {
 }
 
 .players_grid {
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 1em;
 }
 
 .players_entry {
-    width: clamp(50%, 50%, 100%);
+    /* width: clamp(50%, 50%, 100%); */
     background-image: url("assets/button-background-disabled.png");
     border: none;
     display: flex;
